--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -173,6 +173,12 @@
 			app:popUpToInclusive="true" />
 	</fragment>
 
+	<fragment
+		android:id="@+id/nav_about"
+		android:name="de.iplabs.mobile_sdk_example_app.fragments.AboutFragment"
+		android:label="@string/about_fragment_title"
+		tools:layout="@layout/fragment_about" />
+
 	<action
 		android:id="@+id/action_global_nav_cart"
 		app:destination="@id/nav_cart"
@@ -180,4 +186,14 @@
 		app:exitAnim="@anim/slide_out_left"
 		app:popEnterAnim="@anim/slide_in_left"
 		app:popExitAnim="@anim/slide_out_right" />
+
+	<action
+		android:id="@+id/action_global_nav_about"
+		app:destination="@id/nav_about"
+		app:enterAnim="@anim/slide_in_right"
+		app:exitAnim="@anim/slide_out_left"
+		app:popEnterAnim="@anim/slide_in_left"
+		app:popExitAnim="@anim/slide_out_right"
+		app:popUpTo="@id/nav_editor"
+		app:popUpToInclusive="true" />
 </navigation>
