Turn about page into tabbed view with dedicated sub-fragments for about, privacy, and licenses

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -175,9 +175,9 @@
 
 	<fragment
 		android:id="@+id/nav_about"
-		android:name="de.iplabs.mobile_sdk_example_app.fragments.AboutFragment"
-		android:label="@string/about_fragment_title"
-		tools:layout="@layout/fragment_about" />
+		android:name="de.iplabs.mobile_sdk_example_app.fragments.LegalTermsFragment"
+		android:label="@string/legal_terms_fragment_title"
+		tools:layout="@layout/fragment_legal_terms" />
 
 	<action
 		android:id="@+id/action_global_nav_cart"
