--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,38 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/license_scroller"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical"
+	android:fadingEdgeLength="16dp"
+	android:requiresFadingEdge="vertical"
 	tools:context=".MainActivity">
 
-	<ScrollView
-		android:id="@+id/license_scroller"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:fadingEdgeLength="16dp"
-		android:requiresFadingEdge="vertical">
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		android:padding="16dp">
 
-		<LinearLayout
+		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="vertical"
-			android:padding="16dp">
+			android:layout_marginBottom="8dp"
+			android:text="@string/about_app_heading"
+			android:textSize="22sp"
+			android:textStyle="bold" />
 
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="8dp"
-				android:text="@string/about_app_heading"
-				android:textSize="22sp"
-				android:textStyle="bold" />
-
-			<TextView
-				android:id="@+id/about_app_text"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/about_app_content"
-				android:textSize="16sp" />
-		</LinearLayout>
-	</ScrollView>
-</LinearLayout>
+		<TextView
+			android:id="@+id/about_app_text"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="@string/about_app_content"
+			android:textSize="16sp" />
+	</LinearLayout>
+</ScrollView>
